Specifying root for github pages on index.html.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 </head>
 <body>
 	<h1>Directory Tree</h1><p>
-	<a href=".">.</a><br>
-	├── <a href="./dists/">dists</a><br>
-	├── <a href="./index.html">index.html</a><br>
-	└── <a href="./pool/">pool</a><br>
+	<a href="https://mtoboid.github.io/ppa">https://mtoboid.github.io/ppa</a><br>
+	├── <a href="https://mtoboid.github.io/ppa/dists/">dists</a><br>
+	└── <a href="https://mtoboid.github.io/ppa/pool/">pool</a><br>
 	<br><br>
 	</p>
 	<p>
